--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
+    <button><i class="fas fa-bars menu"></i></button>
+    <!-- <button><i class="fas fa-angle-up menu2"></i></button> -->
+
     <div class="first">
         <h1>Stylish Portfolio</h1>
         <h3><em>A Free Bootstrap Theme by Start Bootstrap</em></h3>
@@ -57,6 +60,52 @@
        <h2>Welcome to <i>your</i> <br> next website!</h2>
        <a href="">Download Now!</a>
     </div>
+
+    <div class="fifth">
+        <div class="fifth-text">
+            <h3>PORTFOLIO</h3>
+            <h2>Recent Projects</h2>
+        </div>
+        <div class="all">
+            <div class="box">
+                <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/img/portfolio-1.jpg" alt="">
+                <div class="overlay1"></div>
+                <div class="box-text1">
+                    <h2>Stationary</h2>
+                    <p>A yellow pencil with envelopes on a clean, blue <br> backdrop!</p>
+                </div>
+               
+            </div>
+            <div class="box">
+                <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/img/portfolio-2.jpg" alt="">
+                <div class="overlay2"></div>
+                <div class="box-text2">
+                    <h2>Ice Cream</h2>
+                    <p>A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                </div>
+
+            </div>
+            <div class="box">
+                <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/img/portfolio-3.jpg" alt="">
+                <div class="overlay3"></div>
+                <div class="box-text3">
+                    <h2>Strawberries</h2>
+                    <p>Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/img/portfolio-4.jpg" alt="">
+                <div class="overlay4"></div>
+                <div class="box-text4">
+                    <h2>Workspace</h2>
+                    <p>A yellow workspace with some scissors, pencils, and other objects.</p>
+                </div>
+            </div>
+        </div>
+        <div class="empty"></div>
+    
+    </div>
+
 
     <div class="sixth">
         <h2>The buttons below are impossible to resist...</h2>
